remove inclusion of config and logging file in jar
Former-commit-id: e6b4a8b55ca129dbc0b11484bd23d4b07194a5bb

--- a/modules/elasticsearch/build.gradle
+++ b/modules/elasticsearch/build.gradle
@@ -21,7 +21,7 @@ processResources.doLast {
 }
 
 // no need to use the resource dir
-sourceSets.main.resources.srcDirs 'src/main/java', rootProject.file('config')
+sourceSets.main.resources.srcDirs 'src/main/java'
 sourceSets.test.resources.srcDirs 'src/test/java'
 
 dependencies {
