remove jarjar'ed files that are not needed (notice, license)
Former-commit-id: c14783d3e2fb274c5e111de521f73e5c4e263865

--- a/modules/jarjar/build.gradle
+++ b/modules/jarjar/build.gradle
@@ -65,8 +65,11 @@ jar << {
 
         // seems like empty dirs still exists, unjar and clean them
         unjar(src: jar.archivePath, dest: "build/tmp/extracted")
+        delete(file: "build/tmp/extracted/NOTICE")
+        delete(file: "build/tmp/extracted/LICENSE")
+        delete(file: "build/tmp/extracted/build.properties")
         delete(dir: "build/tmp/extracted/jsr166y")
-        delete(dir: "build/tmp/extracted/gnu/trove")
+        delete(dir: "build/tmp/extracted/gnu")
         delete(dir: "build/tmp/extracted/org/codehaus")
         delete(dir: "build/tmp/extracted/org/aopalliance")
         delete(dir: "build/tmp/extracted/com/google")
