--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,16 @@ modules/elasticsearch/build/
 modules/test/integration/build/
 modules/test/testng/build/
 modules/benchmark/micro/build/
-plugins/attachments/build
-plugins/groovy/build
+plugins/analysis/icu/build
+plugins/cloud/aws/build
+plugins/hadoop/build
+plugins/lang/groovy/build
+plugins/lang/javascript/build
+plugins/lang/python/build
+plugins/mapper/attachments/build
+plugins/river/couchdb/build
+plugins/river/rabbitmq/build
+plugins/river/twitter/build
+plugins/river/wikipedia/build
+plugins/transport/memcached/build
+plugins/transport/thrift/build
