--- a/modules/elasticsearch/src/test/java/org/elasticsearch/index/analysis/test1.yml
+++ b/modules/elasticsearch/src/test/java/org/elasticsearch/index/analysis/test1.yml
@@ -17,9 +17,11 @@ index :
         stopwords : [stop2-1, stop2-2]
     analyzer :
       standard :
+        alias: alias1,alias2
         type : standard
         stopwords : [test1, test2, test3]
       custom1 :
+        alias : [alias4, alias5]
         tokenizer : standard
         filter : [stop, stop2]
       custom2 :
