--- a/build.gradle
+++ b/build.gradle
@@ -142,6 +142,5 @@ task release(dependsOn: [zip, tar]) << {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '0.9-rc-3'
-    jarPath = 'gradle'
+    gradleVersion = '0.9'
 }
