fix urlRoot for gradle to point to the 0.9 dist
Former-commit-id: ec943b51608d7f52479e5da23b6f71fc2ba46097

--- a/build.gradle
+++ b/build.gradle
@@ -142,5 +142,6 @@ task release(dependsOn: [zip, tar]) << {
 }
 
 task wrapper(type: Wrapper) {
+    urlRoot = "http://gradle.artifactoryonline.com/gradle/distributions"
     gradleVersion = '0.9'
 }
