--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,9 +1,9 @@
-#Sun Dec 19 19:52:10 IST 2010
+#Mon Dec 20 17:56:15 IST 2010
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 distributionVersion=0.9
 zipStorePath=wrapper/dists
-urlRoot=http\://dist.codehaus.org/gradle
+urlRoot=http\://gradle.artifactoryonline.com/gradle/distributions
 distributionName=gradle
 distributionClassifier=bin
