--- a/plugins/lang/groovy/build.gradle
+++ b/plugins/lang/groovy/build.gradle
@@ -11,8 +11,8 @@ configurations.compile.transitive = true
 configurations.testCompile.transitive = true
 
 // no need to use the resource dir
-sourceSets.main.resources.srcDirs 'src/main/groovy'
-sourceSets.test.resources.srcDirs 'src/test/groovy'
+sourceSets.main.resources.srcDirs 'src/main/groovy', 'src/main/java'
+sourceSets.test.resources.srcDirs 'src/test/groovy', 'src/test/java'
 
 // add the source files to the dist jar
 //jar {
