--- a/modules/elasticsearch/build.gradle
+++ b/modules/elasticsearch/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     compile 'org.apache.lucene:lucene-analyzers:3.0.3'
     compile 'org.apache.lucene:lucene-queries:3.0.3'
     compile 'org.apache.lucene:lucene-fast-vector-highlighter:3.0.3'
+    compile 'org.apache.lucene:lucene-memory:3.0.3'
+    compile 'org.apache.lucene:lucene-highlighter:3.0.3'
 }
 
 configurations {
