Add Snowball stemmer as analyzer and filter
Former-commit-id: 4a45df88c653ef83bda8e5937eb42362f1c75e96

--- a/modules/elasticsearch/build.gradle
+++ b/modules/elasticsearch/build.gradle
@@ -39,6 +39,7 @@ dependencies {
 
     compile 'org.apache.lucene:lucene-core:3.0.3'
     compile 'org.apache.lucene:lucene-analyzers:3.0.3'
+    compile 'org.apache.lucene:lucene-snowball:3.0.3'
     compile 'org.apache.lucene:lucene-queries:3.0.3'
     compile 'org.apache.lucene:lucene-fast-vector-highlighter:3.0.3'
     compile 'org.apache.lucene:lucene-memory:3.0.3'
