move nullable annotation to the common package, and move javax inject (from guice 3) to internal common as well
Former-commit-id: 4750ccdc1cda8790c5b1c4e8251bbce8959648fb

--- a/modules/jarjar/build.gradle
+++ b/modules/jarjar/build.gradle
@@ -38,7 +38,7 @@ jar << {
         jarjar(jarfile: jarjarArchivePath) {
             zipfileset(src: jar.archivePath)
             configurations.runtime.files.findAll {file ->
-                ['mvel', 'jackson', 'joda', 'snakeyaml', 'netty', 'guice', 'javax.inject', 'aopalliance', 'guava', 'trove', 'jsr166y'].any { file.name.contains(it) }
+                ['inject', 'mvel', 'jackson', 'joda', 'snakeyaml', 'netty', 'guice', 'javax.inject', 'aopalliance', 'guava', 'trove', 'jsr166y'].any { file.name.contains(it) }
             }.each { jarjarFile ->
                 zipfileset(src: jarjarFile) {
                     exclude(name: "META-INF/**")
@@ -49,6 +49,7 @@ jar << {
             rule pattern: "jsr166y.**", result: "org.elasticsearch.common.util.concurrent.jsr166y.@1"
 
             rule pattern: "org.aopalliance.**", result: "org.elasticsearch.common.aopalliance.@1"
+            rule pattern: "javax.inject.**", result: "org.elasticsearch.common.inject.jex.@1"
             rule pattern: "com.google.inject.**", result: "org.elasticsearch.common.inject.@1"
 
             rule pattern: "org.mvel2.**", result: "org.elasticsearch.common.mvel2.@1"
