have compilation and javadoc use UTF8 encoding
Former-commit-id: 9ff8006d37768ab5ce1e8873dbdf35cbd3de0dfe

--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,16 @@ allprojects {
     plugins.withType(JavaPlugin).whenPluginAdded {
         sourceCompatibility = 1.6
         targetCompatibility = 1.6
+        compileJava {
+            sourceCompatibility = 1.6
+            targetCompatibility = 1.6
+            options.encoding = "UTF8"
+        }
+        javadoc {
+            maxMemory = "1g"
+            options.encoding = "UTF8"
+        }
+
 
         test {
             useTestNG()
