add a test for custom type class name in token filter factory
Former-commit-id: 3907c8c6808c89b101c27b5340c26e083e87a4b8

--- a/modules/elasticsearch/src/test/java/org/elasticsearch/index/analysis/test1.yml
+++ b/modules/elasticsearch/src/test/java/org/elasticsearch/index/analysis/test1.yml
@@ -18,6 +18,8 @@ index :
       metaphone :
         type : phonetic
         encoder : metaphone
+      my :
+        type : org.elasticsearch.index.analysis.filter1.MyFilterTokenFilterFactory
     analyzer :
       standard :
         alias: alias1,alias2
@@ -33,6 +35,9 @@ index :
       custom3 :
         tokenizer : standard
         filter : [metaphone]
+      custom4 :
+        tokenizer : standard
+        filter : [my]
       czechAnalyzerWithStemmer :
         tokenizer : standard
         filter : [standard, lowercase, stop, czech_stem]
