improve test time
Former-commit-id: 5ecb847a3a3bb34269235f81887a767e4c83b462

--- a/modules/test/integration/src/test/java/org/elasticsearch/test/integration/gateway/fs/BlobStoreSmallBufferSizeFsIndexGatewayTests.yml
+++ b/modules/test/integration/src/test/java/org/elasticsearch/test/integration/gateway/fs/BlobStoreSmallBufferSizeFsIndexGatewayTests.yml
@@ -4,7 +4,7 @@ cluster:
 gateway:
   type: fs
   fs:
-    buffer_size: 3b
+    buffer_size: 1kb
 index:
   number_of_shards: 1
   number_of_replicas: 1
