upgraded to new trove, major upgrade, better perf, but damn, 2mb larger in size...
Former-commit-id: ad4bb464e8491acc2c0c9a384bad6729764c7058

--- a/modules/jarjar/build.gradle
+++ b/modules/jarjar/build.gradle
@@ -10,7 +10,7 @@ dependencies {
     runtime 'com.google.inject.extensions:guice-multibindings:3.0-rc2'
 
     runtime 'com.google.guava:guava:r07'
-    runtime 'org.elasticsearch:es-trove:2.1.0'
+    runtime 'org.elasticsearch:es-trove:3.0.0rc1'
     runtime 'org.elasticsearch:es-jsr166y:20100615'
 
     runtime 'commons-codec:commons-codec:1.4'
