Adding Analysis.getWordList method which retrieves list of words from setting or file specified by setting.
Former-commit-id: f319625cb5d1800f1543b2e447ba65ce69fbfc05

--- a/modules/elasticsearch/src/test/java/org/elasticsearch/index/analysis/test1.yml
+++ b/modules/elasticsearch/src/test/java/org/elasticsearch/index/analysis/test1.yml
@@ -22,7 +22,7 @@ index :
         type : org.elasticsearch.index.analysis.filter1.MyFilterTokenFilterFactory
       dict_dec :
         type : dictionary_decompounder
-        word_list_path : /dev/null
+        word_list : [donau, dampf, schiff, spargel, creme, suppe]
     analyzer :
       standard :
         alias: alias1,alias2
@@ -44,6 +44,6 @@ index :
       czechAnalyzerWithStemmer :
         tokenizer : standard
         filter : [standard, lowercase, stop, czech_stem]
-      custom5 :
+      decompoundingAnalyzer :
         tokenizer : standard
         filter : [dict_dec]
