add maxMem to the heapsize when executing tests
Former-commit-id: 0e595532f7f4f64005d5559c774aa0cc7cca2518

--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,8 @@ allprojects {
                 suiteNamte = testSuiteName
                 listeners << 'org.elasticsearch.util.testng.Listeners'
             }
+            maxHeapSize = '1g'
+            systemProperties["es.logger.prefix"] = ""
             systemProperties["es.test.log.conf"] = System.getProperty("es.test.log.conf", "log4j-gradle.properties")
             systemProperties["es.test.log.conf"] = System.getProperty("es.test.log.conf", "log4j-gradle.properties")
         }
