explicitly set the cat under which jdk logging is logged
Former-commit-id: 8d867dc24c9c0a6cf964e18e9b0d4591ae0e9b5f

--- a/settings.gradle
+++ b/settings.gradle
@@ -19,6 +19,7 @@ include 'plugins-lang-python'
 
 include 'plugins-transport-memcached'
 include 'plugins-transport-thrift'
+include 'plugins-transport-wares'
 
 include 'plugins-river-twitter'
 include 'plugins-river-wikipedia'
