upgrade to guice 3.0
Former-commit-id: af419cc636ef70c3597ae4c8456a3634e888f5a3

--- a/modules/jarjar/build.gradle
+++ b/modules/jarjar/build.gradle
@@ -5,9 +5,9 @@ archivesBaseName = "$project.archivesBaseName"
 dependencies {
     runtime 'aopalliance:aopalliance:1.0'
     runtime 'javax.inject:javax.inject:1'
-    runtime 'com.google.inject:guice:3.0-rc3'
-    runtime 'com.google.inject.extensions:guice-assistedinject:3.0-rc2'
-    runtime 'com.google.inject.extensions:guice-multibindings:3.0-rc2'
+    runtime 'com.google.inject:guice:3.0'
+    runtime 'com.google.inject.extensions:guice-assistedinject:3.0'
+    runtime 'com.google.inject.extensions:guice-multibindings:3.0'
 
     runtime 'com.google.guava:guava:r08'
     runtime 'org.elasticsearch:es-trove:3.0.0rc1'
