--- a/plugins/cloud/aws/build.gradle
+++ b/plugins/cloud/aws/build.gradle
@@ -31,15 +31,17 @@ configurations {
 
 dependencies {
     compile project(':elasticsearch')
-    compile("com.amazonaws:aws-java-sdk:1.1.9") { transitive = false }
+    compile("com.amazonaws:aws-java-sdk:1.2.0") { transitive = false }
     runtime("commons-logging:commons-logging:1.1.1") { transitive = false }
     runtime("commons-codec:commons-codec:1.3") { transitive = false }
-    runtime("commons-httpclient:commons-httpclient:3.0.1") { transitive = false }
+    runtime("org.apache.httpcomponents:httpclient:4.1.1") { transitive = false }
+    runtime("org.apache.httpcomponents:httpcore:4.1") { transitive = false }
 
-    distLib("com.amazonaws:aws-java-sdk:1.1.9") { transitive = false }
+    distLib("com.amazonaws:aws-java-sdk:1.2.0") { transitive = false }
     distLib("commons-codec:commons-codec:1.3") { transitive = false }
     distLib("commons-logging:commons-logging:1.1.1") { transitive = false }
-    distLib("commons-httpclient:commons-httpclient:3.0.1") { transitive = false }
+    distLib("org.apache.httpcomponents:httpclient:4.1.1") { transitive = false }
+    distLib("org.apache.httpcomponents:httpcore:4.1") { transitive = false }
 }
 
 task explodedDist(dependsOn: [jar], description: 'Builds the plugin zip file') << {
