adding ability for gradle to create eclipse project files and classpaths
Former-commit-id: 6a60bbba1d2822f7d63563bd1fc165b972ef0ea3

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,12 @@ plugins/river/twitter/build
 plugins/river/wikipedia/build
 plugins/transport/memcached/build
 plugins/transport/thrift/build
+
+## eclipse ignores (use 'gradle eclipse' to build eclipse projects)
+.project
+.classpath
+.settings
+*/.project
+*/.classpath
+*/.settings
+*/eclipse-build
