--- a/modules/test/testng/build.gradle
+++ b/modules/test/testng/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java'
+apply plugin: 'eclipse'
 
 archivesBaseName = "$rootProject.archivesBaseName-$project.archivesBaseName"
 
@@ -12,4 +13,8 @@ sourceSets.test.resources.srcDirs 'src/test/java'
 dependencies {
     compile('org.testng:testng:5.10:jdk15') { transitive = false }
     compile('log4j:log4j:1.2.15') { transitive = false }
+}
+
+eclipseClasspath {
+    defaultOutputDir = file('build/eclipse-build')
 }
