add common sample configs
Former-commit-id: 1bf30a9d575dc76604afd9f4d83e6ca99e6844fe

--- a/config/elasticsearch.yml
+++ b/config/elasticsearch.yml
@@ -7,3 +7,15 @@
 #  recover_after_nodes: 1
 #  recover_after_time: 5m
 #  expected_nodes: 2
+
+
+# Force all memory to be locked, forcing JVM to never swap
+#  (make sure to set MIN and MAX mem to the same value)
+#bootstrap:
+#  mlockall: true
+
+# Unicast Discovery (disable multicast)
+#discovery:
+#  zen:
+#    multicast.enabled: false
+#    unicast.hosts: ["host1", "host2"]
