add path settings sampel
Former-commit-id: 297f2644ec1134c8bcc4e347ed7e031982e16e91

--- a/config/elasticsearch.yml
+++ b/config/elasticsearch.yml
@@ -2,6 +2,13 @@
 #cluster:
 #  name: elasticsearch
 
+# Path Settings
+#path:
+#  conf: /path/to/conf
+#  data: /path/to/data
+#  work: /path/to/work
+#  logs: /paht/to/logs
+
 # Gateway Settings
 #gateway:
 #  recover_after_nodes: 1
