Problem with default configuration file for unicast, closes #1005.
Former-commit-id: bbc676cc9123fd6e99076dcee8840b68b8dc2bcc

--- a/config/elasticsearch.yml
+++ b/config/elasticsearch.yml
@@ -25,4 +25,4 @@
 #discovery:
 #  zen:
 #    multicast.enabled: false
-#    unicast.hosts: ["host1", "host2"]
+#    unicast.zen.hosts: ["host1", "host2"]
