grr, fix wrong setting again
Former-commit-id: e3526f7f076afda196463604ec020de83613eeaa

--- a/config/elasticsearch.yml
+++ b/config/elasticsearch.yml
@@ -25,4 +25,4 @@
 #discovery:
 #  zen:
 #    multicast.enabled: false
-#    unicast.zen.hosts: ["host1", "host2"]
+#    ping.unicast.hosts: ["host1", "host2"]
