upgrade gradle to 1.0 m3
Former-commit-id: 67dc32100d16160c497831112becd41c3c214d04

--- a/build.gradle
+++ b/build.gradle
@@ -178,5 +178,5 @@ task release(dependsOn: [zip, tar]) << {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '0.9.2'
+    gradleVersion = '1.0-milestone-3'
 }
