fix default settings to have the correct setting to disable multicast
Former-commit-id: a51f86aeb10caef510554808f673db901d11f1af

--- a/config/elasticsearch.yml
+++ b/config/elasticsearch.yml
@@ -24,5 +24,5 @@
 # Unicast Discovery (disable multicast)
 #discovery:
 #  zen:
-#    multicast.enabled: false
+#    ping.multicast.enabled: false
 #    ping.unicast.hosts: ["host1", "host2"]
