Fixing plugins description
Former-commit-id: d1ad7478247147ecf0997091bc43076a9eb1bc1c

--- a/plugins/analysis/icu/build.gradle
+++ b/plugins/analysis/icu/build.gradle
@@ -108,7 +108,7 @@ uploadArchives {
         pom.project {
             inceptionYear '2009'
             name 'elasticsearch-plugins-analysis-icu'
-            description 'Attachments Plugin for ElasticSearch'
+            description 'ICU Analysis Plugin for ElasticSearch'
             licenses {
                 license {
                     name 'The Apache Software License, Version 2.0'
