--- a/plugins/river/twitter/build.gradle
+++ b/plugins/river/twitter/build.gradle
@@ -106,7 +106,7 @@ uploadArchives {
         pom.project {
             inceptionYear '2009'
             name 'elasticsearch-plugins-river-twitter'
-            description 'Attachments Plugin for ElasticSearch'
+            description 'Twitter River Plugin for ElasticSearch'
             licenses {
                 license {
                     name 'The Apache Software License, Version 2.0'
