--- a/plugins/river/rabbitmq/build.gradle
+++ b/plugins/river/rabbitmq/build.gradle
@@ -108,7 +108,7 @@ uploadArchives {
         pom.project {
             inceptionYear '2009'
             name 'elasticsearch-plugins-river-rabbitmq'
-            description 'Attachments Plugin for ElasticSearch'
+            description 'RabbitMQ River Plugin for ElasticSearch'
             licenses {
                 license {
                     name 'The Apache Software License, Version 2.0'
