upgrade to testng 6.1.1
Former-commit-id: 420ed9daa68d7b3bdd935aaf76dd09b033891df0

--- a/modules/test/testng/build.gradle
+++ b/modules/test/testng/build.gradle
@@ -11,7 +11,7 @@ sourceSets.main.resources.srcDirs 'src/main/java'
 sourceSets.test.resources.srcDirs 'src/test/java'
 
 dependencies {
-    compile('org.testng:testng:5.10:jdk15') { transitive = false }
+    compile('org.testng:testng:6.1.1') { transitive = false }
     compile('log4j:log4j:1.2.15') { transitive = false }
 }
 
