support also ping.timeout in zen disco, and add it to the sample config
Former-commit-id: 9be62a06e9e1244dc726e5ee33a523d31bacfedb

--- a/config/elasticsearch.yml
+++ b/config/elasticsearch.yml
@@ -24,5 +24,6 @@
 # Unicast Discovery (disable multicast)
 #discovery:
 #  zen:
+#    ping.timeout: 3s
 #    ping.multicast.enabled: false
 #    ping.unicast.hosts: ["host1", "host2"]
