add also minimum master nodes to the config tempalte
Former-commit-id: e094de88796d1b97b74c94be71077d4d9554d10f

--- a/config/elasticsearch.yml
+++ b/config/elasticsearch.yml
@@ -24,6 +24,7 @@
 # Unicast Discovery (disable multicast)
 #discovery:
 #  zen:
+#    minimum_master_nodes: 1
 #    ping.timeout: 3s
 #    ping.multicast.enabled: false
 #    ping.unicast.hosts: ["host1", "host2"]
