--- a/modules/elasticsearch/src/test/java/org/elasticsearch/index/analysis/test1.yml
+++ b/modules/elasticsearch/src/test/java/org/elasticsearch/index/analysis/test1.yml
@@ -8,6 +8,9 @@ index :
         type : html_strip
         escaped_tags : [xxx, yyy]
         read_ahead : 1024
+      my_mapping :
+        type : mapping
+        mappings : [ph=>f, qu=>q]
     filter :
       stop :
         type : stop
@@ -41,6 +44,9 @@ index :
       custom4 :
         tokenizer : standard
         filter : [my]
+      custom5 :
+        tokenizer : standard
+        char_filter : [my_mapping]
       czechAnalyzerWithStemmer :
         tokenizer : standard
         filter : [standard, lowercase, stop, czech_stem]
