maybe we will do this later...
Former-commit-id: 2dd6075171fde3f5e5c09a34e7cb89d0ba950504

--- a/build.gradle
+++ b/build.gradle
@@ -136,6 +136,15 @@ task explodedDist(dependsOn: [configurations.distLib], description: 'Builds a mi
     ant.delete { fileset(dir: explodedDistLibDir, includes: "jarjar-*.jar") } // no need jackson, we jarjar it
     ant.delete { fileset(dir: explodedDistLibDir, includes: "sigar-*.jar") } // no need sigar directly under lib...
 
+    // move relevant jars to ext
+    //    ant.move(todir: "$explodedDistLibDir/ext") {
+    //        fileset(dir: explodedDistLibDir) {
+    //            include(name: '*jline*')
+    //            include(name: '*log4j*')
+    //            include(name: '*jna*')
+    //        }
+    //    }
+
     ant.chmod(dir: "$explodedDistDir/bin", perm: "ugo+rx", includes: "**/*")
 }
 
