Groovy Plugins: Upgrade to 1.8.1, closes #1175.
Former-commit-id: b104c19e7ad9b0461b4903735a2c0c78e1f315cf

--- a/plugins/lang/groovy/build.gradle
+++ b/plugins/lang/groovy/build.gradle
@@ -30,9 +30,9 @@ configurations {
 dependencies {
     compile project(':elasticsearch')
 
-    groovy group: 'org.codehaus.groovy', name: 'groovy-all', version: '1.8.0'
-    distLib('org.codehaus.groovy:groovy-all:1.8.0') { transitive = false }
-    testCompile('junit:junit:4.8.1') {transitive = false}
+    groovy group: 'org.codehaus.groovy', name: 'groovy-all', version: '1.8.1'
+    distLib('org.codehaus.groovy:groovy-all:1.8.1') { transitive = false }
+    //testCompile('junit:junit:4.8.1') {transitive = false}
 }
 
 task explodedDist(dependsOn: [jar], description: 'Builds the plugin zip file') << {
