add a note in the build regarding joda time 2
Former-commit-id: 2b777df21e71eca27d5e65859076a74743ba6919

--- a/modules/jarjar/build.gradle
+++ b/modules/jarjar/build.gradle
@@ -10,6 +10,7 @@ dependencies {
 
     runtime 'commons-codec:commons-codec:1.5'
 
+    // joda 2.0 moved to using volatile fields for datetime, which hurts performance for facets!
     runtime 'joda-time:joda-time:1.6.2'
     runtime 'org.mvel:mvel2:2.1.Beta5'
 
