Build ElasticSearch as Debian package
Former-commit-id: d7f7f77d81da9a3d55d31b1bd1716ef82da5894e

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,13 @@ plugins/river/twitter/build
 plugins/river/wikipedia/build
 plugins/transport/memcached/build
 plugins/transport/thrift/build
+.idea/gradle.xml
+.idea/misc.xml
+.idea/modules/elasticsearch-root.iml
+.idea/modules/plugin-river-rabbitmq.iml
+.idea/projectCodeStyle.xml
+
+
 
 ## eclipse ignores (use 'gradle eclipse' to build eclipse projects)
 .project
