--- a/config/logging.yml
+++ b/config/logging.yml
@@ -10,7 +10,7 @@ logger:
   #index.gateway: DEBUG
 
   # peer shard recovery
-  #index.shard.recovery: DEBUG
+  #indices.recovery: DEBUG
 
   # discovery
   #discovery: TRACE
