add custom config for plugins path as well
Former-commit-id: 5610d90c2d479fba03b3def2fc7357942d2be72d

--- a/config/elasticsearch.yml
+++ b/config/elasticsearch.yml
@@ -6,6 +6,7 @@
 #path.data: /path/to/data
 #path.work: /path/to/work
 #path.logs: /path/to/logs
+#path.plugins: /path/to/plugins
 
 # Force all memory to be locked, forcing the JVM to never swap
 #bootstrap.mlockall: true
