add junit to the test dep when running groovy tests
Former-commit-id: 79b63b3e07f3b79e02d9cdb0cbf94acc21592e30

--- a/plugins/lang/groovy/build.gradle
+++ b/plugins/lang/groovy/build.gradle
@@ -32,7 +32,7 @@ dependencies {
 
     groovy group: 'org.codehaus.groovy', name: 'groovy-all', version: '1.8.2'
     distLib('org.codehaus.groovy:groovy-all:1.8.2') { transitive = false }
-    //testCompile('junit:junit:4.8.1') {transitive = false}
+    testCompile('junit:junit:4.8.1') {transitive = false}
 }
 
 task explodedDist(dependsOn: [jar], description: 'Builds the plugin zip file') << {
