--- a/plugins/river/twitter/build.gradle
+++ b/plugins/river/twitter/build.gradle
@@ -33,8 +33,10 @@ configurations {
 dependencies {
     compile project(':elasticsearch')
 
-    compile('org.twitter4j:twitter4j-core:2.1.10') { transitive = false }
-    distLib('org.twitter4j:twitter4j-core:2.1.10') { transitive = false }
+    compile('org.twitter4j:twitter4j-core:2.2.4') { transitive = false }
+    compile('org.twitter4j:twitter4j-stream:2.2.4') { transitive = false }
+    compile('org.twitter4j:twitter4j-core:2.2.4') { transitive = false }
+    compile('org.twitter4j:twitter4j-stream:2.2.4') { transitive = false }
 }
 
 task explodedDist(dependsOn: [jar], description: 'Builds the plugin zip file') << {
